--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://hopper.proxy.rlwy.net:43183/railway?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234abcd
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 server.port=${PORT:8080}
