--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=${jdbc:mysql://hopper.proxy.rlwy.net:43183/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
-spring.datasource.username=${root}
-spring.datasource.password=${1234abcd}
+spring.datasource.url=jdbc:mysql://hopper.proxy.rlwy.net:43183/railway?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234abcd
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
 
-server.port=${PORT:8080}
+server.port=8080
