--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=jdbc:postgresql://shuttle.proxy.rlwy.net:22042/railway
+spring.datasource.url=jdbc:postgresql://shuttle.proxy.rlwy.net:22042/railway?options=-c%20TimeZone=UTC
 spring.datasource.username=postgres
+spring.datasource.password=SwCnvECymiLjNxujdACibajvJgYxAUhV
 
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.jpa.show-sql=false
 
 server.port=${PORT:8080}
