--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:postgresql://shuttle.proxy.rlwy.net:22042/railway?options=-c%20TimeZone=UTC
-spring.datasource.username=postgres
-spring.datasource.password=SwCnvECymiLjNxujdACibajvJgYxAUhV
+
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
